--- a/src/Meeps/Pages/Meeps.css
+++ b/src/Meeps/Pages/Meeps.css
@@ -60,10 +60,9 @@ height: 100%;
 .backButton-Container{
 
 position: fixed;
-width: 45.4vw;
+width: 34vw;
 padding-left: 10px;
-
-padding-top: 10px;
+margin: 0;
 
   backdrop-filter: blur(10px);  
   z-index: 1;
